Mitigate breaking changes in updated dependencies